--- a/views/StafPenjualan/stafstatuspembayaran2.ejs
+++ b/views/StafPenjualan/stafstatuspembayaran2.ejs
@@ -14,11 +14,13 @@
         <img src="/assets/user.png" alt="">
     </header>
     <div class="sidenav">
-        <a href="stafperiodepesanan">Perioda Pemesan</a>
-        <a href="stafstatuspembayaran">Status Pesanan Warga</a>
+        <a href="stafstatuspembayaran1">Status Pesanan Warga P1</a>
+        <a href="stafstatuspembayaran2">Status Pesanan Warga P2</a>
+        <a href="stafstatuspembayaran3">Status Pesanan Warga P3</a>
+        <a href="stafstatuspembayaran4">Status Pesanan Warga P4</a>
     </div>
     <div class="main">
-        <p>Pemesanan Periode Ke: </p>
+        <p>Pemesanan Periode Ke: 2 </p>
         <table>
             <tr>
                 <th>Id_Warga</th>
@@ -64,6 +66,9 @@
             </tr>
             
         </table>
+        <a href="stafperiodepesanan">
+            <input type="submit" value="Pilih Kembali Periode" name='check'>
+            </a>
         <a href="pembayaran">
             <input type="submit" value="Selesai" name='check'>
         </a>
