--- a/views/StafPenjualan/homestaf.ejs
+++ b/views/StafPenjualan/homestaf.ejs
@@ -15,7 +15,10 @@
     </header>
     <div class="sidenav">
         <a href="stafperiodepesanan">Perioda Pemesan</a>
-        <a href="stafstatuspembayaran">Status Pesanan Warga</a>
+        <a href="stafstatuspembayaran1">Status Pesanan Warga P1</a>
+        <a href="stafstatuspembayaran2">Status Pesanan Warga P2</a>
+        <a href="stafstatuspembayaran3">Status Pesanan Warga P3</a>
+        <a href="stafstatuspembayaran4">Status Pesanan Warga P4</a>
     </div>
     <div class="main">
         <p>Kecamatan </p>
