--- a/views/StafPenjualan/stafperiodepesanan.ejs
+++ b/views/StafPenjualan/stafperiodepesanan.ejs
@@ -15,7 +15,10 @@
     </header>
     <div class="sidenav">
         <a href="stafperiodepesanan">Perioda Pemesan</a>
-        <a href="stafstatuspembayaran">Status Pesanan Warga</a>
+        <a href="stafstatuspembayaran1">Status Pesanan Warga P1</a>
+        <a href="stafstatuspembayaran2">Status Pesanan Warga P2</a>
+        <a href="stafstatuspembayaran3">Status Pesanan Warga P3</a>
+        <a href="stafstatuspembayaran4">Status Pesanan Warga P4</a>
     </div>
     <div class="main">
         <p>Pilih Perioda Pemesanan </p>
@@ -34,7 +37,7 @@
                 <td> <a href="">Perioda 1</a> </td>
                 <td> <a href="">17-01-2022</a> </td>
                 <td> <a href="">01-02-2022</a> </td>
-                <td> <a href=""><input type="submit" value="periode 1"></a> </td>
+                <td> <a href="stafstatuspembayaran1"><input type="submit" value="periode 1"></a> </td>
 
             </tr>
             <tr>
@@ -42,7 +45,7 @@
                 <td> <a href="">Perioda 2</a> </td>
                 <td> <a href="">10-02-2022</a> </td>
                 <td> <a href="">24-02-2022</a> </td>
-                <td> <a href=""><input type="submit" value="perioda 2"></a> </td>
+                <td> <a href="stafstatuspembayaran2"><input type="submit" value="perioda 2"></a> </td>
 
             </tr>
             <tr>
@@ -50,7 +53,7 @@
                 <td> <a href="">Perioda 3</a> </td>
                 <td> <a href="">01-03-2022</a> </td>
                 <td> <a href="">15-03-2022</a> </td>
-                <td> <a href=""><input type="submit" value="perioda 3"></a> </td>
+                <td> <a href="stafstatuspembayaran3"><input type="submit" value="perioda 3"></a> </td>
 
             </tr>
             <tr>
@@ -58,7 +61,7 @@
                 <td> <a href="">Perioda 4</a> </td>
                 <td> <a href="">24-03-2022</a> </td>
                 <td> <a href="">01-04-2022</a> </td>
-                <td> <a href=""><input type="submit" value="perioda 4"></a> </td>
+                <td> <a href="stafstatuspembayaran4"><input type="submit" value="perioda 4"></a> </td>
 
             </tr>
             
