--- a/views/Warga/beliminyak.ejs
+++ b/views/Warga/beliminyak.ejs
@@ -32,6 +32,7 @@
             </form>
             <br>
             <br>
+            <h5>*maksimal pembelian 5 liter</h5>
         <table id="harga">
             <tr>
                 <th>No</th>
