--- a/views/StafPenjualan/homestafpenjualan.ejs
+++ b/views/StafPenjualan/homestafpenjualan.ejs
@@ -15,10 +15,7 @@
     </header>
         <div class="content">
             <a class="a1" href="stafperiodepesanan">Periode Pemesanan</a>
-            <a class="a2" href="stafstatuspembayaran1">Status Pesanan Warga P1</a>
-            <a class="a3" href="stafstatuspembayaran2">Status Pesanan Warga P2</a>
-            <a class="a4" href="stafstatuspembayaran3">Status Pesanan Warga P3</a>
-            <a class="a5" href="stafstatuspembayaran4">Status Pesanan Warga P4</a>
+            <a class="a2" href="stafstatuspembayaran">Status Pembayaran RW</a>
         </div>
 </body>
 </html>
