--- a/views/StafPenjualan/stafperiodepesanan.ejs
+++ b/views/StafPenjualan/stafperiodepesanan.ejs
@@ -15,10 +15,7 @@
     </header>
     <div class="sidenav">
         <a href="stafperiodepesanan">Perioda Pemesan</a>
-        <a href="stafstatuspembayaran1">Status Pesanan Warga P1</a>
-        <a href="stafstatuspembayaran2">Status Pesanan Warga P2</a>
-        <a href="stafstatuspembayaran3">Status Pesanan Warga P3</a>
-        <a href="stafstatuspembayaran4">Status Pesanan Warga P4</a>
+        <a href="stafstatuspembayaran">Status Pembayaran RW</a>
     </div>
     <div class="main">
         <p>Pilih Perioda Pemesanan </p>
@@ -28,7 +25,6 @@
                 <th>Nama Perioda</th>
                 <th>Tanggal mulai</th>
                 <th>Tanggal berakhir</th>
-                <th>Pilih Perioda Untuk Menampilkan Status Pembayaran</th>
 
             </tr>
             <tr>
@@ -37,7 +33,6 @@
                 <td> <a href="">Perioda 1</a> </td>
                 <td> <a href="">17-01-2022</a> </td>
                 <td> <a href="">01-02-2022</a> </td>
-                <td> <a href="stafstatuspembayaran1"><input type="submit" value="periode 1"></a> </td>
 
             </tr>
             <tr>
@@ -45,7 +40,6 @@
                 <td> <a href="">Perioda 2</a> </td>
                 <td> <a href="">10-02-2022</a> </td>
                 <td> <a href="">24-02-2022</a> </td>
-                <td> <a href="stafstatuspembayaran2"><input type="submit" value="perioda 2"></a> </td>
 
             </tr>
             <tr>
@@ -53,7 +47,6 @@
                 <td> <a href="">Perioda 3</a> </td>
                 <td> <a href="">01-03-2022</a> </td>
                 <td> <a href="">15-03-2022</a> </td>
-                <td> <a href="stafstatuspembayaran3"><input type="submit" value="perioda 3"></a> </td>
 
             </tr>
             <tr>
@@ -61,12 +54,11 @@
                 <td> <a href="">Perioda 4</a> </td>
                 <td> <a href="">24-03-2022</a> </td>
                 <td> <a href="">01-04-2022</a> </td>
-                <td> <a href="stafstatuspembayaran4"><input type="submit" value="perioda 4"></a> </td>
-
             </tr>
             
             
         </table>
+        <a href="stafstatuspembayaran"><input type="submit" value="pilih status pembayaran"></a>
     </div>
 </body>
 </html>
