db username + belum beres

--- a/views/Admin/users.ejs
+++ b/views/Admin/users.ejs
@@ -28,6 +28,7 @@
             <tr>
                 <th>No</th>
                 <th>Nama</th>
+                <th>UserName</th>
                 <th>Role</th>
                 <th colspan="2">Akses</th>
             </tr>
@@ -37,6 +38,7 @@
                     <%if(user.role_u!=='admin'){%>
                         <td><%= i %> </td>
                         <td><%= user.nama %></td>
+                        <td><%= user.username %></td>
                         <td><%= user.role_u %></td>
                         <td><a href="users/hapus/<%=user.id_U %>" >hapus</a> </td>
                         <td><a href="">Edit</a></td>
