data status pembayaran RW

--- a/views/StafPenjualan/homestaf.ejs
+++ b/views/StafPenjualan/homestaf.ejs
@@ -15,7 +15,7 @@
     </header>
     <div class="sidenav">
         <a href="stafperiodepesanan">Perioda Pemesan</a>
-        <a href="stafstatuspembayaran">Status Pembayaran RW</a>
+        <a href="/rw2">Status Pembayaran RW</a>
     </div>
     <div class="main">
         <p>Kecamatan </p>
