--- a/views/StafPenjualan/stafstatuspembayaran.ejs
+++ b/views/StafPenjualan/stafstatuspembayaran.ejs
@@ -36,7 +36,7 @@
                     <th>Nama Ketua</th>
                     <th>Alamat</th>
                     <th>Kelurahan</th>
-                    <th colspan="2">Akses</th>
+                    <th colspan="2">Status Pembayaran</th>
                 </tr>
                 <% var i = 1; %> 
                 <% for (const rw of rw_data) { %>
