page pembayaran rt & rw

--- a/views/RW/statusrt.ejs
+++ b/views/RW/statusrt.ejs
@@ -38,7 +38,7 @@
                 <th>Nama Ketua RT</th>
                 <th>Alamat</th>
                 <th>Kecamatan</th>
-                <th>Status Pemesanan RT</th>
+                <th>Status Pembayaran RT</th>
             </tr>
             <tr>
                 <td>1</td>
@@ -80,11 +80,11 @@
                 <td> <a href="">bsojong gede</a> </td>
                 <td> <a><input type="checkbox"></a></td>
             </tr>
-            
+
         </table>
 
-        <a href="addrt">
-            <input type="submit" value="Tambah" name='addNewRole'>
+        <a href="pembayaranrt">
+            <input type="submit" value="Selesai" name='addNewRole'>
         </a>
     </div>
 </body>
