--- a/views/Warga/beliminyak.ejs
+++ b/views/Warga/beliminyak.ejs
@@ -59,7 +59,7 @@
         </table>
             <input style="margin-left:250px;margin-top: 5px;" type="button" value="Hitung" name='check'>
             <br>
-        <a class="ref" href="pembayaran">
+        <a class="ref" href="pembayaranwg">
             <input type="submit" value="Selesai" name='check'>
         </a>
     </div>
