--- a/views/StafPenjualan/stafstatuspembayaran.ejs
+++ b/views/StafPenjualan/stafstatuspembayaran.ejs
@@ -46,12 +46,13 @@
                         <td><%= rw.nama_ketua_rw %></td>
                         <td><%= rw.alamat %></td>
                         <td><%= rw.nama_kel %></td>
+                        <td> <a><input type="checkbox"></a></td>
                     </tr>
                     <% i +=1; %> 
                 <%} %> 
                 
             </table>
-        <a href="pembayaran">
+        <a href="pembayaranstaf">
             <input type="submit" value="Selesai" name='check'>
         </a>
     </div>
