--- a/views/Warga/homewarga.ejs
+++ b/views/Warga/homewarga.ejs
@@ -10,12 +10,13 @@
 <body>
     <header class="header">
         <p>Warga</p>
+        <p><%= namasaya %> </p>
         <a href="logout"><p>Logout</p></a>
         <img src="/assets/user.png" alt="">
     </header>
         <div class="content">
             <a class="a1" href="changepass">Change Password</a>
-            <a class="a2" href="beliminyak">Beli Minyak</a>
+            <a class="a2" href="formbeli">Beli Minyak</a>
             <a class="a3" href="pesanansaya">Pesanan Saya</a>
         </div>
 </body>
