--- a/views/RT/pesananwarga.ejs
+++ b/views/RT/pesananwarga.ejs
@@ -10,6 +10,7 @@
 <body>
     <header class="header">
         <p>RT</p>
+        <p><%= namasaya %> </p>
         <a href="logout"><p>Logout</p></a>
         <img src="/assets/user.png" alt="">
     </header>
