fitur ganti profile (blm connect db)

--- a/public/stylewarga.css
+++ b/public/stylewarga.css
@@ -289,3 +289,46 @@ a.a6{
   .disable{
     display: none;
   }
+  .profile-pic {
+    color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+  .profile-pic input {
+    display: none;
+  }
+  .profile-pic img {
+    position: absolute;
+    object-fit: cover;
+    width: 50px;
+    height: 50px;
+    box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.35);
+    border-radius: 100px;
+    z-index: 0;
+  }
+  .profile-pic .labels {
+    cursor: pointer;
+    height: 50px;
+    width: 50px;
+  }
+  .profile-pic:hover .labels {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 10000;
+    color: #fafafa;
+    transition: background-color 0.2s ease-in-out;
+    border-radius: 100px;
+    margin-bottom: 0;
+  }
+  .profile-pic span {
+    display: inline-flex;
+    padding: 0.2em;
+    height: 2em;
+  }
+  body a:hover {
+    text-decoration: none;
+  }
