--- a/views/RT/pesananwarga.ejs
+++ b/views/RT/pesananwarga.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleadmin.css">
+    <script src="/script/profile.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -12,7 +13,14 @@
         <p>RT</p>
         <p><%= namasaya %> </p>
         <a href="logout"><p>Logout</p></a>
-        <img src="/assets/user.png" alt="">
+        <div class="profile-pic">
+            <label class="labels" for="file">
+              <span class=""></span>
+              <span>Ganti profile</span>
+            </label>
+            <input id="file" type="file" onchange="loadFile(event)"/>
+            <img src="/assets/user.png" id="output" width="200" />
+          </div>
     </header>
     <div class="sidenav">
         <a href="homert">Home</a>
