--- a/views/Admin/rw.ejs
+++ b/views/Admin/rw.ejs
@@ -6,10 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleadmin.css">
     <script src="/script/profile.js" defer></script>
+    <script src="/script/pagination.js" defer></script>
     <title>RW</title>
 </head>
 <body>
     <header class="header">
+        <div id="page">
+            <button class="pg"><a href="kecamatan">1</a></button>
+            <button class="pg active"><a href="kelurahan">2</a></button>
+            <button class="pg"><a href="perioda">3</a></button>
+            <button class="pg"><a href="produk">4</a></button>
+            <button class="pg"><a href="rw">5</a></button>
+            <button class="pg"><a href="users">6</a></button>
+          </div>
         <p>Admin</p>
         <a href="logout"><p>Logout</p></a>
         <div class="profile-pic">
