--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,7 +17,7 @@
                 <label>Username</label>
             </div>
             <div class="text">
-                <input type="text" name="password" required oninvalid="this.setCustomValidity('Masukan Password anda')" oninput="setCustomValidity('')"><br>
+                <input type="password" name="password" required oninvalid="this.setCustomValidity('Masukan Password anda')" oninput="setCustomValidity('')"><br>
                 <span></span>
                 <label>Password</label>
             </div>
